--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.0.2'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
 }
